deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-sample-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: aspnet-sample
  template:
    metadata:
      labels:
        app: aspnet-sample
    spec:
      containers:
      - image: mcr.microsoft.com/dotnet/core/samples:aspnetapp
        name: app
