ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtool
spec:
  rules:
  - host: aspnet-sample-deployment.io
    http: 
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aspnet-sample-service
              port:
                number: 80
